--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,12 +46,14 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@main
 
-
       - name: Setup GCloud Auth
         id: auth
         uses: google-github-actions/auth@v0.4.0
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v0'
 
       - name: Deploy GCloud Cloud Run
         id: 'deploy'
