Alterando para variables

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -60,7 +60,7 @@ jobs:
           image: ${{ env.ARTIFACT_REGISTRY_URL }}/${{ env.ARTIFACT_REPOSITORY_NAME }}:latest
           flags: |
             --allow-unauthenticated
-          secrets: |
+          env_vars: |
             CLOUD_SQL_CONNECTION_NAME='${{ secrets.CLOUD_SQL_CONNECTION_NAME }}'
             CLOUD_SQL_DATABASE_NAME='${{ secrets.CLOUD_SQL_DATABASE_NAME }}'
             CLOUD_SQL_PASSWORD='${{ secrets.CLOUD_SQL_PASSWORD }}'
