configurando conexão com db

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,6 +12,7 @@ env:
   SERVICE_NAME: spotmusic-backend
   ARTIFACT_REPOSITORY_NAME: spotmusic
   ARTIFACT_REGISTRY_URL: 'us-central1-docker.pkg.dev/hackathon-7aso-grupo-05/teste'
+  DB_INSTANCE_NAME: 'db-mysql-spotmusic-7aso-hackaton-grupo5'
 
 jobs:
   Build:
@@ -60,6 +61,7 @@ jobs:
           image: ${{ env.ARTIFACT_REGISTRY_URL }}/${{ env.ARTIFACT_REPOSITORY_NAME }}:latest
           flags: |
             --allow-unauthenticated
+            --set-cloudsql-instances=${{ .env.DB_INSTANCE_NAME }}
           env_vars: |
             CLOUD_SQL_CONNECTION_NAME=${{ secrets.CLOUD_SQL_CONNECTION_NAME }}
             CLOUD_SQL_DATABASE_NAME=${{ secrets.CLOUD_SQL_DATABASE_NAME }}
