--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -61,7 +61,7 @@ jobs:
           image: ${{ env.ARTIFACT_REGISTRY_URL }}/${{ env.ARTIFACT_REPOSITORY_NAME }}:latest
           flags: |
             --allow-unauthenticated
-            --set-cloudsql-instances=${{ .env.DB_INSTANCE_NAME }}
+            --set-cloudsql-instances=${{ env.DB_INSTANCE_NAME }}
           env_vars: |
             CLOUD_SQL_CONNECTION_NAME=${{ secrets.CLOUD_SQL_CONNECTION_NAME }}
             CLOUD_SQL_DATABASE_NAME=${{ secrets.CLOUD_SQL_DATABASE_NAME }}
