--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Requirements
-        run:  pip Flask flask-wtf flask-cors PyMySQL cryptography gunicorn pytest pytest-cov
+        run:  pip install flask flask-wtf flask-cors PyMySQL cryptography gunicorn pytest pytest-cov
 
 
       - name: Unit Test
