--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,11 +2,11 @@ sonar.projectKey=ital0sant0s_7aso-hackaton-grupo5-backend
 sonar.organization=ital0sant0s
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=7aso-hackaton-grupo5-backend
+sonar.projectName=7aso-hackaton-grupo5-backend
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
